@@ -128,6 +128,7 @@ module Raylib
   ARROW_PADDING = 16          # DropdownBox arrow separation from border and items
   DROPDOWN_ITEMS_SPACING = 17 # DropdownBox items separation
   DROPDOWN_ARROW_HIDDEN = 18  # DropdownBox arrow hidden
+  DROPDOWN_ROLL_UP = 19       # DropdownBox roll up flag (default rolls down)
 
   # enum GuiTextBoxProperty
   # TextBox/TextBoxMulti/ValueBox/Spinner
@@ -379,11 +380,11 @@ module Raylib
   ICON_WARNING = 220
   ICON_HELP_BOX = 221
   ICON_INFO_BOX = 222
-  ICON_223 = 223
-  ICON_224 = 224
-  ICON_225 = 225
-  ICON_226 = 226
-  ICON_227 = 227
+  ICON_PRIORITY = 223
+  ICON_LAYERS_ISO = 224
+  ICON_LAYERS2 = 225
+  ICON_MLAYERS = 226
+  ICON_MAPS = 227
   ICON_228 = 228
   ICON_229 = 229
   ICON_230 = 230
