@@ -14,7 +14,7 @@ module Raylib
   RAYLIB_VERSION_MAJOR = 5
   RAYLIB_VERSION_MINOR = 5
   RAYLIB_VERSION_PATCH = 0
-  RAYLIB_VERSION = "5.5"
+  RAYLIB_VERSION = "5.5-dev"
 
   # Enum
 
